proyect done without readme

--- a/notebooks/main_acq_proyect2.ipynb
+++ b/notebooks/main_acq_proyect2.ipynb
@@ -161,7 +161,7 @@
     "    sns.set(rc={'figure.figsize':(12,8)})\n",
     "    return sns.heatmap(df_diamonds_corr2, annot=True);\n",
     "\n",
-    "corr_graf = correlation_visualization(df_diamonds_corr)"
+    "#corr_graf = correlation_visualization(df_diamonds_corr)"
    ]
   },
   {
